# proto

./: Cargo.toml  Proto.md
migrations/: 20240925055121_users.sql  20240925063511_posts.sql  20240925064005_tags.sql
scripts/: database.sh
src/: build.rs  lib.rs  main.rs  model.rs  routes.rs
tests/: routes.rs
