[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rocket = "0.5.1"
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tera = "1.20.0"
tokio = "1.40.0"
